--- a/wcd/website/templates/grading_system.html
+++ b/wcd/website/templates/grading_system.html
@@ -160,6 +160,7 @@
     </style>
 </head>
 <body>
+    <a href="{% url 'analyze_certificate' %}" class="back-button"><b>Back to Analyzer</b></a>
     
 
     <h1>SSL/TLS  GRADING  SYSTEM </h1>
