--- a/wcd/website/templates/send_email.html
+++ b/wcd/website/templates/send_email.html
@@ -1,6 +1,5 @@
 {% load static %}
 <!DOCTYPE html>
-<!-- saved from url=(0054)https://colorlib.com/etc/cf/ContactFrom_v12/index.html -->
 <html lang="en">
 
 <head>
@@ -16,7 +15,6 @@
     <link rel="stylesheet" type="text/css" href="{% static 'Contact V12_files/bootstrap.min.css' %}">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!-- <link rel="stylesheet" type="text/css" href="{% static 'Contact V12_files/font-awesome.min.css' %}"> -->
 
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
 
@@ -30,8 +28,6 @@
 
     <link rel="stylesheet" type="text/css" href="{% static 'Contact V12_files/main.css' %}">
 
-    <!-- For nav bar: -->
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.5.0/font/bootstrap-icons.min.css"
@@ -43,6 +39,14 @@
 <body>
     <div class="bg-contact100">
         <div class="container-contact100">
+
+            <!-- Back Button -->
+            <div class="mb-4">
+                <a href="javascript:history.back()" class="btn btn-secondary">
+                    <i class="fa fa-arrow-left"></i> Back
+                </a>
+            </div>
+
             <div class="wrap-contact100">
                 <div class="contact100-pic js-tilt" data-tilt="">
                     <img src="{% static 'Contact V12_files/img.png' %}" alt="IMG">
@@ -101,3 +105,6 @@
         gtag('js', new Date());
         gtag('config', 'UA-23581568-13');
     </script>
+</body>
+
+</html>
